--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "CarrierHelp",
+  "name": "carrierhelp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js",
+    "dev": "set NODE_ENV=development && nodemon server/index.js",
+    "start": "set NODE_ENV=production && node server/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Rajnish Kumar",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -24,5 +25,8 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
